# pods.git-version-scrip

./: CMakeLists.txt  README
python/git_version/: git_version.py  main.py
python/hello/: main.py
src/: git_version.cpp  git_version.hpp
